--- a/admin/app/views/workarea/admin/content/advanced.html.haml
+++ b/admin/app/views/workarea/admin/content/advanced.html.haml
@@ -20,23 +20,41 @@
 
       .property
         %span.property__name= t('workarea.admin.fields.automate_metadata')
-        = toggle_button_for 'content[automate_metadata]', @content.automate_metadata?, title_true: t('workarea.admin.content.advanced.automate'), title_false: t('workarea.admin.content.advanced.do_not_automate'), data: { toggle_button: '' } do
-          = link_to '#automation-help', data: { tooltip: '' } do
-            = inline_svg_tag('workarea/admin/icons/help.svg', class: 'svg-icon svg-icon--small svg-icon--blue', title: t('workarea.admin.content.advanced.learn_more'))
-          %span#automation-help.tooltip-content= t('workarea.admin.content.advanced.automation_help_content')
+        - if Workarea.config.automate_seo_data
+          = toggle_button_for 'content[automate_metadata]', @content.automate_metadata?, title_true: t('workarea.admin.content.advanced.automate'), title_false: t('workarea.admin.content.advanced.do_not_automate'), data: { toggle_button: '' } do
+            = link_to '#automation-help', data: { tooltip: { interactive: true } } do
+              = inline_svg_tag('workarea/admin/icons/help.svg', class: 'svg-icon svg-icon--small svg-icon--blue', title: t('workarea.admin.content.advanced.learn_more'))
+            %span#automation-help.tooltip-content= t('workarea.admin.content.advanced.automation_help_content')
 
-          .toggle-button__more.toggle-button__more--below{ data: { toggle_button_positive_element: '' } }
-            %span.toggle-button__note= t('workarea.admin.content.advanced.automation_note_content')
-          .toggle-button__more.toggle-button__more--below{ data: { toggle_button_negative_element: '' } }
-            .property
-              = label_tag 'content_browser_title', t('workarea.admin.fields.browser_title'), class: 'property__name'
-              = text_field_tag 'content[browser_title]', @content.browser_title, class: 'text-box text-box--i18n', placeholder: t('workarea.admin.content.advanced.browser_title_placeholder')
-              %span.property__note= t('workarea.admin.content.advanced.browser_title_note')
+            .toggle-button__more.toggle-button__more--below{ data: { toggle_button_positive_element: '' } }
+              %span.toggle-button__note= t('workarea.admin.content.advanced.automation_note_content')
+            .toggle-button__more.toggle-button__more--below{ data: { toggle_button_negative_element: '' } }
+              .property
+                = label_tag 'content_browser_title', t('workarea.admin.fields.browser_title'), class: 'property__name'
+                = text_field_tag 'content[browser_title]', @content.browser_title, class: 'text-box text-box--i18n', placeholder: t('workarea.admin.content.advanced.browser_title_placeholder')
+                %span.property__note= t('workarea.admin.content.advanced.browser_title_note')
 
-            .property
-              = label_tag 'content_meta_description', t('workarea.admin.fields.meta_description'), class: 'property__name'
-              = text_field_tag 'content[meta_description]', @content.meta_description, class: 'text-box text-box--i18n'
-              %span.property__note= t('workarea.admin.content.advanced.metadata_description_note')
+              .property
+                = label_tag 'content_meta_description', t('workarea.admin.fields.meta_description'), class: 'property__name'
+                = text_field_tag 'content[meta_description]', @content.meta_description, class: 'text-box text-box--i18n'
+                %span.property__note= t('workarea.admin.content.advanced.metadata_description_note')
+        - else
+          = toggle_button_for 'content[automate_metadata]', false, title_true: t('workarea.admin.content.advanced.automate'), title_false: t('workarea.admin.content.advanced.do_not_automate'), data: { toggle_button: '' }, disabled: true do
+            = link_to '#automation-help', data: { tooltip: { interactive: true } } do
+              = inline_svg_tag('workarea/admin/icons/help.svg', class: 'svg-icon svg-icon--small svg-icon--blue', title: t('workarea.admin.content.advanced.learn_more'))
+            %span#automation-help.tooltip-content
+              = t('workarea.admin.content.advanced.automation_disabled_help_content_html', configuration_path: configuration_path(anchor: 'content'))
+
+      - if !Workarea.config.automate_seo_data
+        .property
+          = label_tag 'content_browser_title', t('workarea.admin.fields.browser_title'), class: 'property__name'
+          = text_field_tag 'content[browser_title]', @content.browser_title, class: 'text-box text-box--i18n', placeholder: t('workarea.admin.content.advanced.browser_title_placeholder')
+          %span.property__note= t('workarea.admin.content.advanced.browser_title_note')
+
+        .property
+          = label_tag 'content_meta_description', t('workarea.admin.fields.meta_description'), class: 'property__name'
+          = text_field_tag 'content[meta_description]', @content.meta_description, class: 'text-box text-box--i18n'
+          %span.property__note= t('workarea.admin.content.advanced.metadata_description_note')
 
       .property
         = label_tag 'content_css', t('workarea.admin.fields.css'), class: 'property__name'
