Add reCAPTHCHA support
This change allows configuring reCAPTCHA v3 and/or v2 in the admin. It
is placed on critical site flows where we've noticed problems with bot
abuse.

While the primary intent is using reCAPTCHA v3, we allow v2 to be
configured to support challenging when a v3 verification fails.

--- a/admin/app/views/workarea/admin/configurations/show.html.haml
+++ b/admin/app/views/workarea/admin/configurations/show.html.haml
@@ -20,6 +20,10 @@
             .box__head
               %h2.box__heading{ data: { jump_to_menu_heading: 1 }, id: fieldset.name.systemize  }= fieldset.name
           .box__body.box__body--pad-top
+            - if fieldset.description.present?
+              .box__section
+                = fieldset.description
+
             - fieldset.fields.each do |field|
               .box__section
                 .grid.grid--huge
